--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -123,7 +123,7 @@
 					</ol>
 				</li>
 				<li>
-					<a href="text/chapter-6.xhtml"><span epub:type="z3998:roman">VI</span>: Ware Politicians</a>
+					<a href="text/chapter-6.xhtml"><span epub:type="z3998:roman">VI</span>: ’Ware Politicians</a>
 					<ol>
 						<li>
 							<a href="text/chapter-6.xhtml#chapter-6-1" epub:type="z3998:roman">I</a>
