CSS tweaks to dedication

--- a/src/epub/text/dedication.xhtml
+++ b/src/epub/text/dedication.xhtml
@@ -7,13 +7,9 @@
 	</head>
 	<body epub:type="frontmatter">
 		<section id="dedication" epub:type="dedication">
-			<p>
-				<b>To</b>
-				<br/>
-				<b>Aubrey Montague</b>
-				<br/>
-				<b>Of Lautoka, Fiji</b>
-			</p>
+			<p><i>To</i><br/>
+			Aubrey Montague<br/>
+			Of Lautoka, Fiji</p>
 			<p>“We twa hae paidlet i’ the burn.”</p>
 		</section>
 	</body>
