--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -15,11 +15,11 @@
 			was published in 1922 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Charles_Edward_Montague"><abbr epub:type="z3998:given-name">C. E.</abbr> Montague</a>.</p>
 			<p>This ebook was produced for<br/>
-			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
+			<a href="https://standardebooks.org/">Standard Ebooks</a><br/>
 			by<br/>
 			<b epub:type="z3998:personal-name">Lukas Bystricky</b>,<br/>
 			and is based on a transcription produced in 2019 by<br/>
-			<b epub:type="z3998:personal-name">David King</b> and <a href="https://www.pgdp.net">Distributed Proofreaders</a><br/>
+			<b epub:type="z3998:personal-name">David King</b> and <a href="https://www.pgdp.net/">Distributed Proofreaders</a><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/60332">Project Gutenberg</a><br/>
 			and on digital scans from the<br/>
@@ -31,12 +31,12 @@
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in 2014 and 2009 by<br/>
-			<a href="https://www.theleagueofmoveabletype.com">The League of Moveable Type</a>.</p>
+			<a href="https://www.theleagueofmoveabletype.com/">The League of Moveable Type</a>.</p>
 			<p>The first edition of this ebook was released on<br/>
 			<b>February 18, 2025, 2:43 <abbr class="eoc">a.m.</abbr></b><br/>
 			You can check for updates to this ebook, view its revision history, or download it for different ereading systems at<br/>
 			<a href="https://standardebooks.org/ebooks/c-e-montague/disenchantment">standardebooks.org/ebooks/c-e-montague/disenchantment</a>.</p>
-			<p>The volunteer-driven Standard Ebooks project relies on readers like you to submit typos, corrections, and other improvements. Anyone can contribute at <a href="https://standardebooks.org">standardebooks.org</a>.</p>
+			<p>The volunteer-driven Standard Ebooks project relies on readers like you to submit typos, corrections, and other improvements. Anyone can contribute at <a href="https://standardebooks.org/">standardebooks.org</a>.</p>
 		</section>
 	</body>
 </html>
